--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "test": "ng test",
         "stylelint": "stylelint '**/*.{less,css}'",
         "lint": "eslint --cache --cache-location node_modules/.cache/eslint",
+        "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}'",
         "typecheck": "tsc --noEmit --skipLibCheck",
         "release": "standard-version",
         "release:patch": "npm run release -- --release-as patch",
@@ -53,62 +54,62 @@
         ]
     },
     "dependencies": {
-        "@angular/animations": "12.2.16",
+        "@angular/animations": "12.2.17",
         "@angular/cdk": "12.2.13",
-        "@angular/common": "12.2.16",
-        "@angular/compiler": "12.2.16",
-        "@angular/core": "12.2.16",
-        "@angular/forms": "12.2.16",
-        "@angular/platform-browser": "12.2.16",
-        "@angular/platform-browser-dynamic": "12.2.16",
-        "@angular/platform-server": "12.2.16",
-        "@angular/router": "12.2.16",
+        "@angular/common": "12.2.17",
+        "@angular/compiler": "12.2.17",
+        "@angular/core": "12.2.17",
+        "@angular/forms": "12.2.17",
+        "@angular/platform-browser": "12.2.17",
+        "@angular/platform-browser-dynamic": "12.2.17",
+        "@angular/platform-server": "12.2.17",
+        "@angular/router": "12.2.17",
         "@nguniversal/express-engine": "12.1.3",
         "core-js": "3.33.0",
-        "highlight.js": "^10.4.1",
-        "ngx-highlightjs": "^4.1.3",
-        "rxjs": "7.5.2",
+        "highlight.js": "10.7.3",
+        "ngx-highlightjs": "4.1.4",
+        "rxjs": "7.5.7",
         "tslib": "2.6.2",
-        "zone.js": "0.11.4"
+        "zone.js": "0.11.8"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "12.2.18",
-        "@angular-devkit/core": "12.2.16",
+        "@angular-devkit/core": "12.2.18",
         "@angular/cli": "12.2.18",
-        "@angular/compiler-cli": "12.2.16",
+        "@angular/compiler-cli": "12.2.17",
         "@angular/language-service": "12.2.17",
-        "@commitlint/cli": "^11.0.0",
-        "@commitlint/config-conventional": "^11.0.0",
+        "@commitlint/cli": "11.0.0",
+        "@commitlint/config-conventional": "11.0.0",
         "@nguniversal/builders": "12.1.3",
-        "@tinkoff/eslint-config": "1.36.1",
-        "@tinkoff/eslint-config-angular": "1.36.1",
-        "@tinkoff/prettier-config": "1.32.1",
+        "@tinkoff/eslint-config": "1.36.2",
+        "@tinkoff/eslint-config-angular": "1.54.3",
+        "@tinkoff/prettier-config": "1.52.1",
         "@types/estree": "1.0.2",
-        "@types/express": "4.17.13",
+        "@types/express": "4.17.18",
         "@types/jasmine": "3.10.13",
         "@types/jasminewd2": "2.0.11",
         "@types/node": "18.18.3",
         "coveralls": "3.1.1",
         "husky": "7.0.4",
-        "jasmine-core": "4.0.0",
+        "jasmine-core": "4.6.0",
         "jasmine-spec-reporter": "7.0.0",
-        "karma": "6.3.16",
-        "karma-chrome-launcher": "3.1.0",
+        "karma": "6.4.2",
+        "karma-chrome-launcher": "3.2.0",
         "karma-coverage-istanbul-reporter": "3.0.3",
-        "karma-jasmine": "4.0.1",
+        "karma-jasmine": "4.0.2",
         "karma-jasmine-html-reporter": "1.7.0",
         "lint-staged": "12.5.0",
-        "ng-packagr": "12.2.6",
+        "ng-packagr": "12.2.7",
         "prettier": "2.8.8",
-        "raw-loader": "^4.0.2",
-        "standard-version": "9.3.2",
-        "ts-node": "9.0.0",
+        "raw-loader": "4.0.2",
+        "standard-version": "9.5.0",
+        "ts-node": "9.1.1",
         "tslint": "6.1.3",
         "typescript": "4.3.5"
     },
     "engines": {
-        "node": ">= 10",
-        "npm": ">= 3"
+        "node": ">= 16",
+        "npm": ">= 8"
     },
     "authors": [
         "Alex Inkin <a.inkin@tinkoff.ru>",
