--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "serve:ssr": "node dist/demo/server/main.js",
         "build:ssr": "ng build && ng run demo:server",
         "prerender": "ng run demo:prerender",
-        "build": "ng build",
+        "build": "ng build ng-event-plugins",
         "postbuild": "node scripts/postbuild.js",
         "test": "ng test",
         "stylelint": "stylelint '**/*.{less,css}'",
@@ -55,34 +55,31 @@
     },
     "prettier": "@taiga-ui/prettier-config",
     "dependencies": {
-        "@angular/animations": "12.2.17",
-        "@angular/cdk": "12.2.13",
-        "@angular/common": "12.2.17",
-        "@angular/compiler": "12.2.17",
-        "@angular/core": "12.2.17",
-        "@angular/forms": "12.2.17",
-        "@angular/platform-browser": "12.2.17",
-        "@angular/platform-browser-dynamic": "12.2.17",
-        "@angular/platform-server": "12.2.17",
-        "@angular/router": "12.2.17",
-        "@nguniversal/express-engine": "12.1.3",
+        "@angular/common": "15.2.10",
+        "@angular/compiler": "15.2.10",
+        "@angular/core": "15.2.10",
+        "@angular/forms": "15.2.10",
+        "@angular/platform-browser": "15.2.10",
+        "@angular/platform-browser-dynamic": "15.2.10",
+        "@angular/platform-server": "15.2.10",
+        "@angular/router": "15.2.10",
+        "@nguniversal/express-engine": "15.2.1",
         "core-js": "3.33.3",
-        "highlight.js": "11.9.0",
-        "ngx-highlightjs": "6.1.3",
+        "ngx-highlightjs": "7.0.1",
         "rxjs": "7.5.7",
         "tslib": "2.6.2",
         "zone.js": "0.11.8"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "12.2.18",
-        "@angular-devkit/core": "12.2.18",
-        "@angular/cli": "12.2.18",
-        "@angular/compiler-cli": "12.2.17",
-        "@angular/language-service": "12.2.17",
+        "@angular-devkit/build-angular": "15.2.10",
+        "@angular-devkit/core": "15.2.10",
+        "@angular/cli": "15.2.10",
+        "@angular/compiler-cli": "15.2.10",
+        "@angular/language-service": "15.2.10",
         "@commitlint/cli": "18.4.3",
         "@commitlint/config-conventional": "18.4.3",
-        "@nguniversal/builders": "12.1.3",
-        "@taiga-ui/prettier-config": "0.6.0",
+        "@nguniversal/builders": "15.2.1",
+        "@taiga-ui/prettier-config": "^0.6.0",
         "@tinkoff/eslint-config": "2.0.0",
         "@tinkoff/eslint-config-angular": "2.0.0",
         "@tinkoff/prettier-config": "2.0.0",
@@ -97,17 +94,17 @@
         "jasmine-spec-reporter": "7.0.0",
         "karma": "6.4.2",
         "karma-chrome-launcher": "3.2.0",
-        "karma-coverage-istanbul-reporter": "3.0.3",
+        "karma-coverage": "^2.2.1",
         "karma-jasmine": "5.1.0",
         "karma-jasmine-html-reporter": "2.1.0",
         "lint-staged": "15.1.0",
-        "ng-packagr": "12.2.7",
+        "ng-packagr": "15.2.2",
         "prettier": "3.0.3",
         "raw-loader": "4.0.2",
         "standard-version": "9.5.0",
         "ts-node": "10.9.1",
         "tslint": "6.1.3",
-        "typescript": "4.3.5"
+        "typescript": "4.9.5"
     },
     "engines": {
         "node": ">= 16",
