--- a/package.json
+++ b/package.json
@@ -107,8 +107,8 @@
         "typescript": "4.9.5"
     },
     "engines": {
-        "node": "21.6.1",
-        "npm": "10.4.0"
+        "node": ">= 16",
+        "npm": ">= 8"
     },
     "authors": [
         "Alex Inkin <a.inkin@tinkoff.ru>",
