--- a/projects/demo/tsconfig.json
+++ b/projects/demo/tsconfig.json
@@ -1,3 +1,4 @@
 {
-    "extends": "../../tsconfig.json"
+    "extends": "../../tsconfig.json",
+    "exclude": ["src/test.ts", "**/*.spec.ts", "karma.conf.js"]
 }
