--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,12 @@ jobs:
       - uses: actions/checkout@v4.1.1
       - uses: taiga-family/ci/actions/setup/node@v1.52.1
       - run: npm run build
+      - run: npm run build:demo
       - run: npm run lint
       - run: npm run prettier -- --check
       - run: npm run test
-        env:
-          NODE_OPTIONS: --openssl-legacy-provider
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.1.0
+      - uses: codecov/codecov-action@v4.1.0
+        continue-on-error: true
 
 concurrency:
   group: ci-${{ github.head_ref }}
