--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
         "build:ssr": "ng build && ng run demo:server",
         "prerender": "ng run demo:prerender",
         "build": "ng build ng-event-plugins",
+        "build:demo": "ng build demo",
         "postbuild": "node scripts/postbuild.js",
         "test": "ng test",
         "stylelint": "stylelint '**/*.{less,css}'",
-        "lint": "eslint --cache --cache-location node_modules/.cache/eslint",
+        "lint": "eslint .",
         "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}'",
         "typecheck": "tsc --noEmit --skipLibCheck",
         "release": "standard-version",
@@ -42,53 +43,72 @@
         "release:major": "npm run release -- --release-as major",
         "publish": "npm run build && npm publish ./dist/ng-event-plugins"
     },
-    "lint-staged": {
-        "*.{js,ts,html,md,less,json}": [
-            "npm run lint -- --fix",
-            "prettier --write",
-            "git add"
-        ],
-        "*.less": [
-            "stylelint --fix",
-            "git add"
+    "commitlint": {
+        "extends": [
+            "@taiga-ui/commitlint-config"
         ]
     },
+    "lint-staged": {
+        "*.less": [
+            "stylelint --fix"
+        ],
+        "*.{js,ts,html}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "*.{svg,yml,md,less,json}": [
+            "prettier --write"
+        ]
+    },
+    "browserslist": [
+        "extends @taiga-ui/browserslist-config"
+    ],
     "prettier": "@taiga-ui/prettier-config",
-    "dependencies": {
-        "@angular/common": "15.2.10",
-        "@angular/compiler": "15.2.10",
-        "@angular/core": "15.2.10",
-        "@angular/forms": "15.2.10",
-        "@angular/platform-browser": "15.2.10",
-        "@angular/platform-browser-dynamic": "15.2.10",
-        "@angular/platform-server": "15.2.10",
-        "@angular/router": "15.2.10",
-        "@nguniversal/express-engine": "15.2.1",
-        "core-js": "3.36.0",
-        "ngx-highlightjs": "7.0.1",
-        "rxjs": "7.5.7",
-        "tslib": "2.6.2",
-        "zone.js": "0.11.8"
+    "eslintConfig": {
+        "extends": [
+            "plugin:@taiga-ui/experience/all"
+        ],
+        "rules": {
+            "@typescript-eslint/ban-types": "off",
+            "import/no-webpack-loader-syntax": "off",
+            "jest/no-jasmine-globals": "off"
+        },
+        "root": true
+    },
+    "stylelint": {
+        "extends": [
+            "@taiga-ui/stylelint-config"
+        ]
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "15.2.10",
-        "@angular-devkit/core": "15.2.10",
-        "@angular/cli": "15.2.10",
-        "@angular/compiler-cli": "15.2.10",
-        "@angular/language-service": "15.2.10",
+        "@angular-devkit/build-angular": "16.2.12",
+        "@angular-devkit/core": "16.2.12",
+        "@angular/cli": "16.2.12",
+        "@angular/common": "16.2.12",
+        "@angular/compiler": "16.2.12",
+        "@angular/compiler-cli": "16.2.12",
+        "@angular/core": "16.2.12",
+        "@angular/forms": "16.2.12",
+        "@angular/language-service": "16.2.12",
+        "@angular/platform-browser": "16.2.12",
+        "@angular/platform-browser-dynamic": "16.2.12",
+        "@angular/platform-server": "16.2.12",
+        "@angular/router": "16.2.12",
         "@commitlint/cli": "18.6.1",
         "@commitlint/config-conventional": "18.6.2",
-        "@nguniversal/builders": "15.2.1",
+        "@nguniversal/builders": "16.2.0",
+        "@nguniversal/express-engine": "16.2.0",
+        "@taiga-ui/browserslist-config": "0.6.0",
+        "@taiga-ui/eslint-plugin-experience": "0.65.0",
         "@taiga-ui/prettier-config": "0.10.0",
-        "@tinkoff/eslint-config": "2.0.3",
-        "@tinkoff/eslint-config-angular": "2.0.3",
-        "@tinkoff/prettier-config": "2.0.0",
+        "@taiga-ui/stylelint-config": "0.20.0",
+        "@taiga-ui/tsconfig": "0.17.0",
         "@types/estree": "1.0.5",
         "@types/express": "4.17.21",
         "@types/jasmine": "5.1.4",
         "@types/jasminewd2": "2.0.13",
         "@types/node": "20.11.27",
-        "coveralls": "3.1.1",
+        "core-js": "3.36.0",
         "husky": "9.0.11",
         "jasmine-core": "5.1.2",
         "jasmine-spec-reporter": "7.0.0",
@@ -98,13 +118,15 @@
         "karma-jasmine": "5.1.0",
         "karma-jasmine-html-reporter": "2.1.0",
         "lint-staged": "15.2.2",
-        "ng-packagr": "15.2.2",
-        "prettier": "3.2.5",
+        "ng-packagr": "16.2.3",
+        "ngx-highlightjs": "^10.0.0",
         "raw-loader": "4.0.2",
+        "rxjs": "7.5.7",
         "standard-version": "9.5.0",
         "ts-node": "10.9.2",
-        "tslint": "6.1.3",
-        "typescript": "4.9.5"
+        "tslib": "2.6.2",
+        "typescript": "5.0.4",
+        "zone.js": "0.13.3"
     },
     "engines": {
         "node": ">= 16",
