--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,12 @@
 {
-    "compileOnSave": false,
+    "extends": "@taiga-ui/tsconfig",
     "compilerOptions": {
         "baseUrl": "./",
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
-        "declaration": false,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "strict": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitReturns": true,
-        "noUnusedParameters": true,
-        "noUnusedLocals": true,
         "target": "ES2022",
-        "typeRoots": ["node_modules/@types"],
-        "lib": ["es2018", "dom"],
         "paths": {
             "@tinkoff/ng-event-plugins": ["projects/ng-event-plugins/src/public-api"]
-        },
-        "useDefineForClassFields": false
+        }
     }
 }
