feat: `Resize` add new plugin
BREAKING CHANGE: `BindEventPlugin` has been removed

--- a/projects/demo/tsconfig.json
+++ b/projects/demo/tsconfig.json
@@ -1,4 +1,7 @@
 {
     "extends": "../../tsconfig.json",
-    "exclude": ["src/test.ts", "**/*.spec.ts", "karma.conf.js"]
+    "exclude": ["src/test.ts", "**/*.spec.ts", "karma.conf.js"],
+    "angularCompilerOptions": {
+        "compilationMode": "full"
+    }
 }
