--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@tinkoff/ng-event-plugins",
+    "name": "@taiga-ui/event-plugins",
     "version": "3.1.0",
     "description": "This is a library for optimizing performance sensitive events and declarative preventDefault and stopPropagation",
     "keywords": [
@@ -23,25 +23,18 @@
     "license": "Apache-2.0",
     "scripts": {
         "postinstall": "husky install",
-        "ng": "ng",
-        "start": "ng serve",
-        "start:ssr": "ng run demo:serve-ssr",
+        "nx": "nx",
+        "start": "nx serve demo",
+        "start:ssr": "nx run demo:serve-ssr",
         "serve:ssr": "node dist/demo/server/main.js",
-        "build:ssr": "ng build && ng run demo:server",
-        "prerender": "ng run demo:prerender",
-        "build": "ng build ng-event-plugins",
-        "build:demo": "ng build demo",
-        "postbuild": "node scripts/postbuild.js",
-        "test": "ng test",
+        "build:ssr": "nx build && nx run demo:server",
+        "prerender": "nx run demo:prerender",
+        "build": "nx build ng-event-plugins",
+        "build:demo": "nx build demo",
+        "test": "nx test ng-event-plugins",
         "stylelint": "stylelint '**/*.{less,css}'",
         "lint": "eslint .",
-        "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}'",
-        "typecheck": "tsc --noEmit --skipLibCheck",
-        "release": "standard-version",
-        "release:patch": "npm run release -- --release-as patch",
-        "release:minor": "npm run release -- --release-as minor",
-        "release:major": "npm run release -- --release-as major",
-        "publish": "npm run build && npm publish ./dist/ng-event-plugins"
+        "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}'"
     },
     "commitlint": {
         "extends": [
@@ -70,9 +63,7 @@
         ],
         "rules": {
             "@typescript-eslint/ban-types": "off",
-            "import/no-webpack-loader-syntax": "off",
-            "jest/no-jasmine-globals": "off",
-            "jest/prefer-importing-jest-globals": "off"
+            "import/no-webpack-loader-syntax": "off"
         },
         "root": true
     },
@@ -99,11 +90,19 @@
         "@commitlint/config-conventional": "19.2.2",
         "@nguniversal/builders": "16.2.0",
         "@nguniversal/express-engine": "16.2.0",
-        "@taiga-ui/browserslist-config": "0.6.0",
-        "@taiga-ui/eslint-plugin-experience": "0.74.6",
-        "@taiga-ui/prettier-config": "0.11.7",
-        "@taiga-ui/stylelint-config": "0.22.1",
-        "@taiga-ui/tsconfig": "0.17.0",
+        "@nx/angular": "19.2.3",
+        "@nx/eslint-plugin": "19.2.3",
+        "@nx/jest": "19.2.3",
+        "@nx/linter": "19.2.3",
+        "@nx/node": "19.2.3",
+        "@nx/workspace": "19.2.3",
+        "@release-it-plugins/workspaces": "4.2.0",
+        "@release-it/conventional-changelog": "8.0.1",
+        "@taiga-ui/browserslist-config": "0.98.0",
+        "@taiga-ui/eslint-plugin-experience": "0.98.0",
+        "@taiga-ui/prettier-config": "0.98.0",
+        "@taiga-ui/stylelint-config": "0.98.0",
+        "@taiga-ui/tsconfig": "0.98.0",
         "@types/estree": "1.0.5",
         "@types/express": "4.17.21",
         "@types/jasmine": "5.1.4",
@@ -111,19 +110,17 @@
         "@types/node": "20.14.2",
         "core-js": "3.37.1",
         "husky": "9.0.11",
-        "jasmine-core": "5.1.2",
-        "jasmine-spec-reporter": "7.0.0",
-        "karma": "6.4.3",
-        "karma-chrome-launcher": "3.2.0",
-        "karma-coverage": "2.2.1",
-        "karma-jasmine": "5.1.0",
-        "karma-jasmine-html-reporter": "2.1.0",
+        "jest": "29.7.0",
+        "jest-environment-jsdom": "29.7.0",
+        "jest-preset-angular": "14.1.0",
         "lint-staged": "15.2.5",
         "ng-packagr": "16.2.3",
         "ngx-highlightjs": "10.0.0",
+        "nx": "19.2.3",
         "raw-loader": "4.0.2",
+        "release-it": "17.3.0",
         "rxjs": "7.5.7",
-        "standard-version": "9.5.0",
+        "ts-jest": "29.1.4",
         "ts-node": "10.9.2",
         "tslib": "2.6.3",
         "typescript": "5.0.4",
@@ -137,10 +134,5 @@
         "Alex Inkin <a.inkin@tinkoff.ru>",
         "Roman Sedov <r.sedov@tinkoff.ru>"
     ],
-    "standard-version": {
-        "scripts": {
-            "postbump": "node scripts/syncVersions.js && git add **/package.json"
-        }
-    },
     "web-types": "./projects/ng-event-plugins/web-types.json"
 }
