--- a/projects/ng-event-plugins/package.json
+++ b/projects/ng-event-plugins/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@tinkoff/ng-event-plugins",
+    "name": "@taiga-ui/event-plugins",
     "version": "3.1.0",
     "description": "This is a library for optimizing performance sensitive events and declarative preventDefault and stopPropagation",
     "keywords": [
