--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,10 @@
 # ==================================================================================
 # ==================================================================================
-#                            @tinkoff/ng-event-plugins codeowners
+#                            @taiga-ui/event-plugins codeowners
 # ==================================================================================
 # ==================================================================================
 #
-#  Configuration of code ownership and review approvals for the @tinkoff/ng-event-plugins repo.
+#  Configuration of code ownership and review approvals for the @taiga-ui/event-plugins repo.
 #
 #  More info: https://help.github.com/articles/about-codeowners/
 #
