--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "test": "nx test ng-event-plugins",
         "stylelint": "stylelint '**/*.{less,css}'",
         "lint": "eslint .",
-        "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}'"
+        "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}' !CHANGELOG.md"
     },
     "commitlint": {
         "extends": [
