--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@taiga-ui/event-plugins",
-    "version": "3.1.0",
+    "version": "3.2.0",
+    "private": true,
     "description": "This is a library for optimizing performance sensitive events and declarative preventDefault and stopPropagation",
     "keywords": [
         "angular",
