--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "change",
         "detection"
     ],
+    "workspaces": ["projects/*"],
     "homepage": "https://github.com/taiga-family/ng-event-plugins#README",
     "bugs": "https://github.com/taiga-family/ng-event-plugins/issues",
     "repository": "https://github.com/taiga-family/ng-event-plugins",
