--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.1.7
+      - uses: taiga-family/ci/actions/setup/checkout@v1.71.2
+      - uses: taiga-family/ci/actions/setup/variables@v1.71.2
       - uses: taiga-family/ci/actions/setup/node@v1.72.0
       - run: npm run build
       - run: npm run build:demo
