--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "stylelint": "stylelint '**/*.{less,css}'",
         "lint": "eslint .",
         "prettier": "prettier '**/*.{svg,yml,js,ts,html,md,less,json}'",
-        "bump": "npx syncer"
+        "prebump": "npx syncer && npx nx build ng-event-plugins",
+        "bump": "npx nx publish ng-event-plugins"
     },
     "commitlint": {
         "extends": [
