--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: !contains(github.event.head_commit.message , 'chore(release)')
+    if: "!contains(github.event.head_commit.message , 'chore(release)')"
     steps:
       - uses: taiga-family/ci/actions/setup/checkout@v1.83.0
       - uses: taiga-family/ci/actions/setup/variables@v1.83.0
