--- a/projects/ng-event-plugins/project.json
+++ b/projects/ng-event-plugins/project.json
@@ -19,20 +19,18 @@
                 "passWithNoTests": true
             }
         },
-        "prepublish": {
-            "executor": "nx:run-commands",
-            "options": {
-                "command": "cp ./LICENSE ./README.md ./dist/{projectName}"
-            }
-        },
         "publish": {
             "executor": "nx:run-commands",
             "options": {
-                "command": "npm publish ./dist/{projectName} --ignore-scripts"
+                "parallel": false,
+                "commands": [
+                    "cp ./LICENSE ./README.md ./dist/{projectName}",
+                    "npm publish ./dist/{projectName} --ignore-scripts"
+                ]
             },
             "dependsOn": [
                 {
-                    "target": "prepublish",
+                    "target": "build",
                     "params": "ignore",
                     "dependencies": false
                 }
