feat: add longtap event

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "serve:ssr": "node dist/demo/server/main.js",
         "build:ssr": "nx build && nx run demo:server",
         "prerender": "nx run demo:prerender",
-        "build": "nx build ng-event-plugins",
+        "build": "nx build ng-event-plugins && node tools/prepare-web-types.mjs",
         "build:demo": "nx build demo",
         "test": "nx test ng-event-plugins",
         "stylelint": "stylelint '**/*.{less,css}'",
@@ -108,8 +108,7 @@
         "@taiga-ui/tsconfig": "0.222.5",
         "@types/estree": "1.0.6",
         "@types/express": "5.0.0",
-        "@types/jasmine": "5.1.4",
-        "@types/jasminewd2": "2.0.13",
+        "@types/jest": "29.5.13",
         "@types/node": "22.7.5",
         "core-js": "3.38.1",
         "husky": "9.1.6",
