--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,13 +1,1 @@
-# ==================================================================================
-# ==================================================================================
-#                            @taiga-ui/event-plugins codeowners
-# ==================================================================================
-# ==================================================================================
-#
-#  Configuration of code ownership and review approvals for the @taiga-ui/event-plugins repo.
-#
-#  More info: https://help.github.com/articles/about-codeowners/
-#
-
-* @waterplea @MarsiBarsi
-# will be requested for review when someone opens a pull request
+* @taiga-family/core-team
