--- a/projects/ng-event-plugins/project.json
+++ b/projects/ng-event-plugins/project.json
@@ -6,6 +6,7 @@
     "targets": {
         "build": {
             "executor": "@angular-devkit/build-angular:ng-packagr",
+            "outputs": ["{workspaceRoot}/dist/{projectName}"],
             "options": {
                 "tsConfig": "tsconfig.json",
                 "project": "projects/{projectName}/ng-package.json"
