feat: upgrade to Angular 19

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ Thumbs.db
 codecov*
 !codecov.yml
 .nx
+migrations.json
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
+*.tsbuildinfo
