--- a/nx.json
+++ b/nx.json
@@ -7,6 +7,9 @@
             }
         }
     },
+    "tui": {
+        "enabled": false
+    },
     "$schema": "./node_modules/nx/schemas/nx-schema.json",
     "targetDefaults": {
         "build": {
