--- a/projects/demo/tsconfig.json
+++ b/projects/demo/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "../../tsconfig.json",
-    "exclude": ["src/test.ts", "**/*.spec.ts", "karma.conf.js"],
+    "exclude": ["**/*.spec.ts"],
     "angularCompilerOptions": {
         "compilationMode": "full"
     }
