--- a/projects/ng-event-plugins/project.json
+++ b/projects/ng-event-plugins/project.json
@@ -5,7 +5,7 @@
     "projectType": "library",
     "targets": {
         "build": {
-            "executor": "@angular-devkit/build-angular:ng-packagr",
+            "executor": "@angular/build:ng-packagr",
             "outputs": ["{workspaceRoot}/dist/{projectName}"],
             "options": {
                 "tsConfig": "tsconfig.json",
