--- a/package.json
+++ b/package.json
@@ -26,13 +26,10 @@
         "projects/*"
     ],
     "scripts": {
-        "postinstall": "husky install",
+        "postinstall": "husky",
         "nx": "nx",
         "start": "nx serve demo",
         "start:ssr": "nx run demo:serve-ssr",
-        "serve:ssr": "node dist/demo/server/main.js",
-        "build:ssr": "nx build && nx run demo:server",
-        "prerender": "nx run demo:prerender",
         "build": "nx build ng-event-plugins && node tools/prepare-web-types.mjs",
         "build:demo": "nx build demo",
         "test": "nx test ng-event-plugins",
@@ -68,52 +65,46 @@
         ]
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "16.2.16",
-        "@angular-devkit/core": "16.2.16",
-        "@angular/cli": "16.2.16",
-        "@angular/common": "16.2.12",
-        "@angular/compiler": "16.2.12",
-        "@angular/compiler-cli": "16.2.12",
-        "@angular/core": "16.2.12",
-        "@angular/forms": "16.2.12",
-        "@angular/language-service": "16.2.12",
-        "@angular/platform-browser": "16.2.12",
-        "@angular/platform-browser-dynamic": "16.2.12",
-        "@angular/platform-server": "16.2.12",
-        "@angular/router": "16.2.12",
-        "@nguniversal/builders": "16.2.0",
-        "@nguniversal/express-engine": "16.2.0",
-        "@nx/jest": "20.8.2",
-        "@nx/workspace": "20.8.2",
-        "@taiga-ui/auto-changelog-config": "0.332.0",
-        "@taiga-ui/browserslist-config": "0.332.0",
-        "@taiga-ui/commitlint-config": "0.332.0",
-        "@taiga-ui/eslint-plugin-experience-next": "0.332.0",
-        "@taiga-ui/jest-config": "0.332.0",
-        "@taiga-ui/prettier-config": "0.332.0",
-        "@taiga-ui/release-it-config": "0.332.0",
-        "@taiga-ui/stylelint-config": "0.332.0",
-        "@taiga-ui/syncer": "0.332.0",
-        "@taiga-ui/tsconfig": "0.332.0",
+        "@angular-devkit/core": "19.2.17",
+        "@angular/animations": "19.2.15",
+        "@angular/build": "19.2.17",
+        "@angular/cli": "19.2.17",
+        "@angular/common": "19.2.15",
+        "@angular/compiler": "19.2.15",
+        "@angular/compiler-cli": "19.2.15",
+        "@angular/core": "19.2.15",
+        "@angular/forms": "19.2.15",
+        "@angular/language-service": "19.2.15",
+        "@angular/platform-browser": "19.2.15",
+        "@angular/platform-browser-dynamic": "19.2.15",
+        "@angular/platform-server": "19.2.15",
+        "@angular/router": "19.2.15",
+        "@nx/jest": "21.6.4",
+        "@nx/workspace": "21.6.4",
+        "@taiga-ui/auto-changelog-config": "0.334.0",
+        "@taiga-ui/browserslist-config": "0.334.0",
+        "@taiga-ui/commitlint-config": "0.334.0",
+        "@taiga-ui/eslint-plugin-experience-next": "0.334.0",
+        "@taiga-ui/jest-config": "0.334.0",
+        "@taiga-ui/prettier-config": "0.334.0",
+        "@taiga-ui/release-it-config": "0.334.0",
+        "@taiga-ui/stylelint-config": "0.334.0",
+        "@taiga-ui/syncer": "0.334.0",
+        "@taiga-ui/tsconfig": "0.334.0",
         "@types/estree": "1.0.8",
         "@types/express": "5.0.3",
         "@types/jest": "29.5.14",
-        "@types/node": "22.18.9",
+        "@types/node": "24.7.0",
         "core-js": "3.46.0",
         "husky": "9.1.7",
-        "jest": "29.7.0",
-        "jest-environment-jsdom": "29.7.0",
-        "jest-preset-angular": "14.6.1",
-        "lint-staged": "15.5.2",
-        "ng-packagr": "16.2.3",
+        "less": "4.4.2",
+        "ng-packagr": "19.2.2",
         "ngx-highlightjs": "10.0.0",
-        "nx": "20.8.2",
-        "raw-loader": "4.0.2",
-        "rxjs": "7.5.7",
-        "ts-jest": "29.4.5",
+        "nx": "21.6.4",
+        "rxjs": "7.8.2",
         "ts-node": "10.9.2",
         "tslib": "2.8.1",
-        "typescript": "5.0.4"
+        "typescript": "5.8.3"
     },
     "authors": [
         "Alex Inkin <a.inkin@tinkoff.ru>",
