--- a/projects/demo/angular.json
+++ b/projects/demo/angular.json
@@ -11,7 +11,7 @@
             "schematics": {},
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular/build:application",
                     "options": {
                         "baseHref": "",
                         "outputPath": "dist/demo",
@@ -40,11 +40,11 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "demo:build"
+                        "buildTarget": "demo:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "demo:build:production"
+                            "buildTarget": "demo:build:production"
                         }
                     }
                 }
